Introduce factory method to replicate empty check in jelly
Signed-off-by: lewisbirks <22620804+lewisbirks@users.noreply.github.com>